トップページにマップページのリンクを挿入

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
             <nav>
                 <a href="/iki-mono/journeys/fukumoto/">Fukumoto Lab</a>
                 <a href="/iki-mono/journeys/nakahigashi/">Nakahigashi Lab</a>
+                <a href="/iki-mono/map.html">Map</a>  </nav>
             </nav>
         </div>
     </header>
@@ -35,3 +36,4 @@
 
 </body>
 </html>
+
