overviewリンクを追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
                 <a href="/iki-mono/journeys/fukumoto/">Fukumoto Lab</a>
                 <a href="/iki-mono/journeys/nakahigashi/">Nakahigashi Lab</a>
                 <a href="/iki-mono/map.html">Map</a>  </nav>
+                <a href="/iki-mono/overview.html">Overview</a>  </nav>
             </nav>
         </div>
     </header>
@@ -36,4 +37,5 @@
 
 </body>
 </html>
+
 
