京都市内の水の流れのリンクを追加

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,8 @@
                 <a href="/iki-mono/journeys/nakahigashi/">Nakahigashi Lab</a>
                 <a href="/iki-mono/map.html">Map</a>  </nav>
                 <a href="/iki-mono/overview.html">Overview</a>  </nav>
+                <a href="/iki-mono/city_water_network.html">City</a>  </nav>
+            
             </nav>
         </div>
     </header>
@@ -37,5 +39,6 @@
 
 </body>
 </html>
+
 
 
